// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be in the range if input set min/max range 1`] = `
<div>
  <input />
  <div>
    0.1 is not a fload value or not in the range. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be invalid if input is not Float value 1`] = `
<div>
  <input />
  <div>
    Hi is not a fload value or not in the range. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be valid if input is Float value 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be valid if input is empty 1`] = `
<div>
  <input />
  <div />
</div>
`;
